--- a/css/movieApi.css
+++ b/css/movieApi.css
@@ -1,97 +1,66 @@
-*{
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+
+body {
+    margin: 0; /*Remove default margin to avoid spacing issues */
+    background-color: rgb(39, 64, 4);
 }
 
-body{
-    background: rgb(49, 74, 6);
-
+header {
+    background-color: rgb(233, 205, 45); /*Adding background color for better visibility */
 }
 
-h1{
-    color: aliceblue;
+.header-links {
+    display: flex;
+    justify-content: flex-start;
+    margin: 0;
 }
 
-.movies-container{
+.header-links a {
+    margin-top: .5rem;
+    margin-bottom: .5rem;
+    margin-left: 20rem;
+    font-size: 26px;
+    font-family: Arial, Helvetica, sans-serif;
+    align-content: center;
+    margin-right: 200px;  /*Adjust spacing between links as needed */
+    color: rgb(112, 37, 5); /* Set text color to white for better visibility */
+    text-decoration: none; /*remove underlines from links */
+}
+
+#main{
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-around;
+    justify-content: center;
 }
 
-.movies li {
-    flex: 0 0 calc(30% - 20px);
-    box-sizing: border-box;
+.movie-container {
     display: flex;
-    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+.movie{
+    width: 300px;
+    margin: 1rem;
+    border-radius: 8px;
+    box-shadow: 0.3px 5px 7px rgba(0,0,0,1,1); 
+    background-color: rgb(158, 157, 160);
+    position: relative;
+    overflow: hidden;
+}
+
+.movie img{
+    width: 100%;
+}
+
+.movie-info {
+    color: rgb(104, 11, 19);
+    display: flex;
     align-items: center;
-    list-style: none;
-    margin: 10px;
-    padding: 15px;
-    border-radius: 15px;
-    text-align: center;
-    background-color: darkblue;
+    justify-content: space-between;
+    padding: 0.5rem 1rem 1rem;
+    letter-spacing: 0.5px;
 }
 
-.movies li img{
-    max-width: 300px;
-    border-radius: 15px;
+.movie-info h3{
+    margin-top: 0;
 }
 
-.movies li h3{
-    color: antiquewhite;
-    font-size: 2.0em;
-    padding: 20px 10px 0;
-    margin-top: auto;
-}
-.movies p{
-    color: aliceblue;
-    font-size: 1.5em;
-    padding: 20px 0px 0;
-    margin-top: auto;
-}
-
-/**
-*{
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-}
-
-body{
-    background: darkolivegreen;
-
-}
-
-h1{
-    color: aliceblue;
-}
-
-.movies li{
-flex: 3;
-display: flex;
-flex-direction: row; 
-align-items: center;
-list-style: none;
-margin: 10px;
-padding: 20px;
-border-radius: 15px;
-text-align: center;
-background-color: rgb(52, 15, 236);
-}
-
-.movies li img{
-    max-width: 300px;
-    border-radius: 15px;
-}
-
-.movies li h3{
-    color: rgb(233, 194, 147);
-    font-size: 2.0em;
-    padding: 20px 10px 0;
-    margin-top: auto;
-}
-
-.movies p{
-    color: aliceblue;
-    font-size: 1.5em;
-    padding: 20px 10px 0;
-    margin-top: auto;
-}
-*/
